Working test: Refined message handling using VecDeque. Simplified project organisation. Added conversion between real units (mm) and device units (encoder counts)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.3"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "*", features = ["full"] }
+tokio-serial = "*"
+pyo3 = { version = "*", features = ["extension-module"] }
+once_cell = "*"
+rusb = "*"
+usb-ids = "*"
+phf = { version = "*", features = ["macros"] }
