Added messages.csv to store the ID, length, and group for all messages.
Added build.rs to generate hash maps from messages.csv at compile time.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
-tokio-serial = "*"
 pyo3 = { version = "*", features = ["extension-module"] }
-once_cell = "*"
 rusb = "*"
-usb-ids = "*"
 phf = { version = "*", features = ["macros"] }
+
+[build-dependencies]
+csv = "*"
+serde = { version = "*", features = ["derive"] }
