--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "thormotion"
 version = "0.1.3"
 edition = "2021"
 
+[lib]
+name = "thormotion"
+crate-type = ["cdylib"]
+# "cdylib" is necessary to produce a shared library for Python to import from.
+
 [dependencies]
 tokio = { version = "*", features = ["full"] }
 pyo3 = { version = "*", features = ["extension-module", "experimental-async"] }
