--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "thormotion"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
+description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
+keywords = ["thorlabs", "lab", "automation", "robot", "robotics"]
+readme = "README.md"
+license = "BSD-3"
+repository = "https://github.com/MillieFD/thormotion"
+authors = ["Amelia Fraser-Dale"]
 
 [lib]
 name = "thormotion"
 crate-type = ["cdylib"]
-# "cdylib" is necessary to produce a shared library for Python to import from.
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
