--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -36,8 +36,6 @@ jobs:
           - runner: ubuntu-22.04
             target: ppc64le
     steps:
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential libusb-1.0-0-dev libc6-dev
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
@@ -49,6 +47,7 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
+          before-script-linux: 'apt-get update && apt-get install -y libusb-1.0-0-dev'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
