Add cross-compilation dependencies to CI workflow
This updates the maturin workflow to include installation of common and architecture-specific dependencies for cross-compilation. Simplifies setup by consolidating steps.

--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -37,6 +37,39 @@ jobs:
             target: ppc64le
     steps:
       - uses: actions/checkout@v4
+        # Install common dependencies for all targets
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libusb-1.0-0-dev libc6-dev build-essential pkg-config gcc-multilib g++-multilib
+      # Install architecture-specific cross-compilation tooling and `pkg-config` wrappers
+      - name: Install cross-compilation dependencies
+        run: |
+          case "${{ matrix.platform.target }}" in
+            "x86_64")
+              sudo apt-get install -y gcc-multilib g++-multilib
+              ;;
+            "x86")
+              sudo apt-get install -y gcc-multilib g++-multilib
+              export PKG_CONFIG=i686-linux-gnu-pkg-config
+              ;;
+            "aarch64")
+              sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+              export PKG_CONFIG=aarch64-linux-gnu-pkg-config
+              ;;
+            "armv7")
+              sudo apt-get install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+              export PKG_CONFIG=arm-linux-gnueabihf-pkg-config
+              ;;
+            "s390x")
+              sudo apt-get install -y gcc-s390x-linux-gnu g++-s390x-linux-gnu
+              export PKG_CONFIG=s390x-linux-gnu-pkg-config
+              ;;
+            "ppc64le")
+              sudo apt-get install -y gcc-powerpc64le-linux-gnu g++-powerpc64le-linux-gnu
+              export PKG_CONFIG=powerpc64le-linux-gnu-pkg-config
+              ;;
+          esac
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
@@ -47,7 +80,6 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
-          before-script-linux: 'apt-get update && apt-get install -y libusb-1.0-0-dev libc6-dev gcc'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
