--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - name: Add rustup target
+      - name: Add target
         run: rustup target add ${{ matrix.target }}
       - name: Install maturin with ziglang
         run: pip install maturin[zig]
