pre-release-development (#1)
* Added DeviceError and EnumerationError to simplify Error enum

* Removed Error::UsbWriteError enum variant. Replaced uses with Error::DeviceError

* Added AptProtocolError enum variant to replace Error::InvalidMessageId and Error::WaitingSenderExists

* Added functions to return individual components of the Hardware Info

* Added messages.csv to store the ID, length, and group for all messages.

Added build.rs to generate hash maps from messages.csv at compile time.

* Added descriptions to build.rs

* Updates to leverage static hash maps generated by build.rs at compile time

* Removed deref() to return double reference "&&" from get_waiting_sender()

* Removed unnecessary Deref import

* Added separate LONG and SHORT timeouts to accommodate for movement commands which may take several seconds to return a result

* Updated poll_read() to leverage new get_length() and get_waiting_sender() functions

* Simplified separate traits files into single traits.rs

* Added timout error

* Update `build.rs` to handle multiple lengths in `Record`

Added `name` field and a custom deserialization function for `length` to parse semicolon-separated values into a vector, allowing for multiple lengths. Group mappings are now stored using a `HashSet` to ensure uniqueness.

* Increase timeouts and adjust poll read interval

Update the LONG_TIMEOUT to 60 seconds and change READ_INTERVAL to POLL_READ_INTERVAL with a new duration of 200 milliseconds to improve responsiveness.

* Added `MOVE_ABSOLUTE` and `MOVE_COMPLETED` entries to `messages.csv` for handling new movement actions.

* Refactor USB device sleep and poll intervals

Replaced `tokio::time::sleep` with `std::thread::sleep` for USB device pauses and renamed `READ_INTERVAL` to `POLL_READ_INTERVAL` to clarify its purpose. Added debug prints to aid in monitoring bytes processing and queue management.

* Implemented UnitConversion, ChanEnableState, and Motor traits to the KDC101 device.

* Restrict mo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,24 @@
 [package]
 name = "thormotion"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
+description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
+keywords = ["thorlabs", "lab", "automation", "robot", "robotics"]
+readme = "README.md"
+license = "BSD-3"
+repository = "https://github.com/MillieFD/thormotion"
+authors = ["Amelia Fraser-Dale"]
+
+[lib]
+name = "thormotion"
+crate-type = ["cdylib"]
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
-tokio-serial = "*"
-pyo3 = { version = "*", features = ["extension-module"] }
-once_cell = "*"
+pyo3 = { version = "*", features = ["extension-module", "experimental-async"] }
 rusb = "*"
-usb-ids = "*"
 phf = { version = "*", features = ["macros"] }
+
+[build-dependencies]
+csv = "*"
+serde = { version = "*", features = ["derive"] }
