--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - aarch64-unknown-linux-gnu
-          - x86_64-unknown-linux-gnu
+          - aarch64
+          - x86_64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
