--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -25,6 +25,7 @@ jobs:
         target:
           - aarch64
           - x86_64
+          - x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -78,7 +79,8 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - x64
+          - aarch64
+          - x86_64
           - x86
     steps:
       - uses: actions/checkout@v4
