Simplified unnecessary "features" cargo argument to follow recommended maturin default implementation
Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ classifiers = [
 dynamic = ["version"]
 
 [tool.maturin]
-cargo-extra-args = "--features extension-module"
+features = ["pyo3/extension-module"]
