--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,17 @@ name = "thormotion"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = []
 format-built-files = []
-extension-module = ["pyo3/extension-module"]
 
 [dependencies]
-pyo3 = { version = "*", features = ["experimental-async"] }
-rusb = "*"
-async-std = "*"
-async-channel = "*"
-thiserror = "*"
-phf = "*"
+pyo3 = { version = "0.24.0", features = ["experimental-async"] }
+rusb = "0.9.4"
+async-std = "1.13.0"
+async-channel = "2.3.1"
+thiserror = "2.0.12"
+phf = "0.11.3"
 
 [build-dependencies]
-csv = "*"
-serde = { version = "*", features = ["derive"] }
-phf_codegen = "*"
+csv = "1.3.1"
+serde = { version = "1.0.219", features = ["derive"] }
+phf_codegen = "0.11.3"
