Update crate type to "lib" in Cargo.toml
    Changed the crate-type from "cdylib" and "rlib" to "lib" for the library. This prevents cargo from trying to link with Python when building a pure rust project.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ build = "build/build.rs"
 
 [lib]
 name = "thormotion"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["lib"]
 
 [features]
 format-built-files = []
