Update license identifier to "BSD-3-Clause" in Cargo.toml
The license field in Cargo.toml was updated for clarity and compliance with SPDX standards.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
 readme = "README.md"
 repository = "https://github.com/MillieFD/thormotion"
-license = "BSD-3"
+license = "BSD-3-Clause"
 keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
 categories = ["hardware-support", "science", "science::robotics"]
 build = "build/build.rs"
