Add PyPI token for publishing.
Added the MATURIN_PYPI_TOKEN environment variable to securely enable publishing to PyPI.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/.github/workflows/maturin-publish.yml
+++ b/.github/workflows/maturin-publish.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: 3.13
       - name: Install maturin and zig
         run: pip install maturin[zig]
       - name: Build wheels
@@ -59,6 +59,8 @@ jobs:
           subject-path: 'wheels-*/*'
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
