--- a/.github/workflows/maturin-publish.yml
+++ b/.github/workflows/maturin-publish.yml
@@ -137,7 +137,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [ manylinux ]
+    needs: [ manylinux, musllinux, windows, macos, sdist ]
     environment: release
     permissions:
       id-token: write
