--- a/.github/workflows/maturin-publish.yml
+++ b/.github/workflows/maturin-publish.yml
@@ -1,9 +1,9 @@
 name: Maturin Build
 
 on:
-  push:
-    branches:
-      - publish-to-pypi
+  release:
+    types:
+      - published
   workflow_dispatch:
 
 permissions:
