--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ name = "thormotion"
 crate-type = ["lib"]
 
 [features]
-format-built-files = []
+default = []
+debug-usb = []
 
 [dependencies]
 pyo3 = { version = "0.24.0", features = ["experimental-async"] }
