--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ debug-usb = []
 
 [dependencies]
 pyo3 = { version = "0.24.0", features = ["experimental-async"] }
-rusb = "0.9.4"
+nusb = "0.1.13"
 async-std = "1.13.0"
 async-channel = "2.3.1"
 thiserror = "2.0.12"
