--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ debug-usb = []
 pyo3 = { version = "0.24.0", features = ["experimental-async"] }
 nusb = "0.1.13"
 async-std = "1.13.0"
-async-channel = "2.3.1"
+async-broadcast = "*"
 thiserror = "2.0.12"
 phf = "0.11.3"
 
