--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,1 +1,14 @@
+# See a full list of keys and their definitions at https://rust-lang.github.io/rustfmt
 edition = "2024"
+style_edition = "2024"
+unstable_features = true
+imports_layout = "Horizontal"
+wrap_comments = true
+condense_wildcard_suffixes = true
+format_code_in_doc_comments = true
+format_strings = true
+hex_literal_case = "Upper"
+imports_granularity = "Module"
+newline_style = "Unix"
+reorder_impl_items = true
+group_imports = "StdExternalCrate"
