--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,13 +1,18 @@
 # See a full list of keys and their definitions at https://rust-lang.github.io/rustfmt
 edition = "2024"
-style_edition = "2024"
 unstable_features = true
-imports_layout = "Horizontal"
+
+# Start tidy alphabetical list
 condense_wildcard_suffixes = true
 format_code_in_doc_comments = true
 format_strings = true
+group_imports = "StdExternalCrate"
 hex_literal_case = "Upper"
 imports_granularity = "Module"
+imports_layout = "Horizontal"
 newline_style = "Unix"
+normalize_doc_attributes = true
 reorder_impl_items = true
-group_imports = "StdExternalCrate"
+style_edition = "2024"
+wrap_comments = true
+# End tidy alphabetical list
