Set comment_width to 100 in rustfmt.toml
Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,6 +3,7 @@ edition = "2024"
 unstable_features = true
 
 # Start tidy alphabetical list
+comment_width = 100
 condense_wildcard_suffixes = true
 format_code_in_doc_comments = true
 format_strings = true
