--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -10,7 +10,7 @@ format_strings = true
 group_imports = "StdExternalCrate"
 hex_literal_case = "Upper"
 imports_granularity = "Module"
-imports_layout = "Horizontal"
+imports_layout = "HorizontalVertical"
 newline_style = "Unix"
 normalize_doc_attributes = true
 reorder_impl_items = true
