Add papaya dependency to Cargo.toml
Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ smol = "*"
 async-broadcast = "*"
 pyo3 = { version = "0.24.0", features = ["experimental-async"] }
 rustc-hash = "*"
+papaya = "*"
