Crystallised dependency versions
Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ crate-type = ["lib"]
 
 [dependencies]
 nusb = "0.1.13"
-smol = "*"
-async-broadcast = "*"
-ahash = "*"
+smol = "2.0.2"
+async-broadcast = "0.7.2"
+ahash = "0.8.11"
 
 [dependencies.pyo3]
 version = "0.24.0"
