--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ nusb = "0.1.14"
 smol = "2.0.2"
 async-broadcast = "0.7.2"
 ahash = "0.8.12"
+log = "0.4.27"
 
 [dependencies.pyo3]
 version = "0.25.1"
