Updated PyO3 features in Cargo.toml to include `extension-module`.
Added the `extension-module` feature to the PyO3 dependency to support building Python extension modules. This enables more comprehensive functionality when integrating with Python.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ log = "0.4.27"
 
 [dependencies.pyo3]
 version = "0.25.1"
-features = ["experimental-async"]
+features = ["experimental-async", "extension-module"]
