Refactored `new` method in `KDC101` to accept generic Into<String>.
Simplified type handling by leveraging the `Into<String>` trait for the `serial_number` parameter, improving API flexibility. Adjusted dependent method calls to handle the change seamlessly.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/cargo.toml
+++ b/cargo.toml
@@ -8,6 +8,7 @@ members = ["thormotion-core", "thormotion-py"]
 authors = ["Amelia Fraser-Dale"]
 categories = ["hardware-support", "science", "science::robotics"]
 description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
+documentation = "https://docs.rs/thormotion/"
 edition = "2024"
 keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
 license = "BSD-3-Clause"
