--- a/thormotion-core/Cargo.toml
+++ b/thormotion-core/Cargo.toml
@@ -5,6 +5,7 @@ name = "thormotion-core"
 authors.workspace = true
 categories.workspace = true
 description.workspace = true
+documentation.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
