--- a/thormotion-py/Cargo.toml
+++ b/thormotion-py/Cargo.toml
@@ -5,6 +5,7 @@ name = "thormotion-py"
 authors.workspace = true
 categories.workspace = true
 description.workspace = true
+documentation.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
