--- a/.github/workflows/pymodule.yml
+++ b/.github/workflows/pymodule.yml
@@ -1,10 +1,13 @@
-name: Maturin Build
+name: Pymodule CI/CD
 
 on:
+  pull_request:
   push:
     branches:
       - main
-  pull_request:
+  release:
+    types:
+      - published
   workflow_dispatch:
 
 permissions:
@@ -134,3 +137,27 @@ jobs:
         with:
           name: wheels-sdist
           path: dist
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ manylinux, musllinux, windows, macos, sdist ]
+    if: github.event_name == 'release'
+    environment: release
+    permissions:
+      id-token: write
+      contents: write
+      attestations: write
+    steps:
+      - uses: actions/download-artifact@v4
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: 'wheels-*/*'
+      - name: Publish to PyPI
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        with:
+          command: upload
+          args: --non-interactive --skip-existing wheels-*/*
