Fixed `--manifest-path` in maturin workflows to use `github.workspace`.
Updated `pymodule.yml` to reference the absolute `--manifest-path` using `${{ github.workspace }}`, ensuring correctness in the build process across different environments.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/.github/workflows/pymodule.yml
+++ b/.github/workflows/pymodule.yml
@@ -35,7 +35,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter --zig --manifest-path thormotion-py/Cargo.toml
+          args: --release --out dist --find-interpreter --zig --manifest-path ${{ github.workspace }}/thormotion-py/Cargo.toml
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -63,7 +63,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter --manifest-path thormotion-py/Cargo.toml
+          args: --release --out dist --find-interpreter --manifest-path ${{ github.workspace }}/thormotion-py/Cargo.toml
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -131,7 +131,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
-          args: --out dist --manifest-path thormotion-py/Cargo.toml
+          args: --out dist --manifest-path ${{ github.workspace }}/thormotion-py/Cargo.toml
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
