--- a/.github/workflows/pymodule.yml
+++ b/.github/workflows/pymodule.yml
@@ -35,7 +35,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out ../dist --find-interpreter --zig
+          args: --release --out dist --find-interpreter --zig --manifest-path thormotion-py/Cargo.toml
+          working-directory: .
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -63,7 +64,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out ../dist --find-interpreter --zig
+          args: --release --out dist --find-interpreter --zig --manifest-path thormotion-py/Cargo.toml
+          working-directory: .
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -131,7 +133,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
-          args: --out ../dist --manifest-path thormotion-py/Cargo.toml
+          args: --out dist --manifest-path thormotion-py/Cargo.toml
+          working-directory: .
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
