Updated `working-directory` in maturin steps of `pymodule.yml`.
Replaced `.` with `${{ github.workspace }}`

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/.github/workflows/pymodule.yml
+++ b/.github/workflows/pymodule.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter --zig --manifest-path thormotion-py/Cargo.toml
-          working-directory: .
+          working-directory: ${{ github.workspace }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -65,7 +65,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter --zig --manifest-path thormotion-py/Cargo.toml
-          working-directory: .
+          working-directory: ${{ github.workspace }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -134,7 +134,7 @@ jobs:
         with:
           command: sdist
           args: --out dist --manifest-path thormotion-py/Cargo.toml
-          working-directory: .
+          working-directory: ${{ github.workspace }}
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
