Renamed `thormotion-core` to `thormotion-rs` and updated dependencies.
Migrated `thormotion-core` package to `thormotion-rs` to better reflect its purpose. Adjusted workspace configuration and dependency paths accordingly, ensuring consistency across the project.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/cargo.toml
+++ b/cargo.toml
@@ -2,16 +2,4 @@
 
 [workspace]
 resolver = "3"
-members = ["thormotion-core", "thormotion-py"]
-
-[workspace.package]
-authors = ["Amelia Fraser-Dale"]
-categories = ["hardware-support", "science", "science::robotics"]
-description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
-documentation = "https://docs.rs/thormotion/"
-edition = "2024"
-keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
-license = "BSD-3-Clause"
-readme = "README.md"
-repository = "https://github.com/MillieFD/thormotion"
-version = "0.4.0"
+members = ["thormotion-rs", "thormotion-py"]
