--- a/thormotion-rs/Cargo.toml
+++ b/thormotion-rs/Cargo.toml
@@ -1,7 +1,7 @@
 # See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package]
-name = "thormotion-py"
+name = "thormotion-rs"
 authors = ["Amelia Fraser-Dale"]
 categories = ["hardware-support", "science", "science::robotics"]
 description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/thormotion/"
 edition = "2024"
 keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
 license = "BSD-3-Clause"
+readme = "README.md"
 repository = "https://github.com/MillieFD/thormotion"
 version = "0.4.0"
 
@@ -17,8 +18,9 @@ name = "thormotion"
 crate-type = ["lib"]
 
 [dependencies]
-thormotion-rs = { path = "../thormotion-rs" }
-
-[dependencies.pyo3]
-version = "0.26"
-features = ["experimental-async", "extension-module"]
+nusb = "0.1.14"
+smol = "2.0"
+pyo3 = "0.26"
+async-broadcast = "0.7"
+ahash = "0.8"
+log = "0.4"
