Renamed `thormotion-rs` to `thormotion` and updated dependencies.
Revised package naming for consistency across the workspace. Updated dependency paths and Cargo.lock to reflect the changes, ensuring compatibility within the project structure.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/thormotion-py/Cargo.toml
+++ b/thormotion-py/Cargo.toml
@@ -18,7 +18,7 @@ name = "thormotion"
 crate-type = ["lib"]
 
 [dependencies]
-thormotion-rs = { path = "../thormotion-rs" }
+thormotion = { path = "../thormotion-rs" }
 
 [dependencies.pyo3]
 version = "0.26"
