--- a/thormotion-rs/Cargo.toml
+++ b/thormotion-rs/Cargo.toml
@@ -17,10 +17,17 @@ version = "0.4.0"
 name = "thormotion"
 crate-type = ["lib"]
 
+[features]
+py = ["dep:pyo3"]
+
 [dependencies]
 nusb = "0.1.14"
 smol = "2.0"
-pyo3 = "0.26"
 async-broadcast = "0.7"
 ahash = "0.8"
 log = "0.4"
+
+[dependencies.pyo3]
+version = "0.27"
+features = ["experimental-async", "extension-module"]
+optional = true
