Moved project out of thormotion-rs subfolder since thormotion-py no longer exists
Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,4 @@ dynamic = ["version", "description", "authors", "readme", "license"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
-cargo-manifest-path = "thormotion-py/Cargo.toml"
+cargo-manifest-path = "Cargo.toml"
