--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/thormotion/"
 edition = "2024"
 keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
 license = "BSD-3-Clause"
-readme = "../README.md"
+readme = "README.md"
 repository = "https://github.com/MillieFD/thormotion"
 version = "0.4.0"
 
