Added `thormacros` as a local dependency in `Cargo.toml`.
Linked the newly created `thormacros` sub-crate as a local dependency. Updated `Cargo.lock` with its metadata and dependencies for procedural macro functionalities.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ smol = "2.0"
 async-broadcast = "0.7"
 ahash = "0.8"
 log = "0.4"
+thormacros = { path = "thormacros" }
 
 [dependencies.pyo3]
 version = "0.27"
