Added `env_logger` as a dev dependency.
Included `env_logger` version 0.11 in `Cargo.toml` to support improved logging during development and debugging workflows.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,6 @@ thormacros = { path = "thormacros" }
 version = "0.27"
 features = ["experimental-async", "extension-module", "experimental-inspect"]
 optional = true
+
+[dev-dependencies]
+env_logger = "0.11"
