Updated `nusb` dependency and adjusted related entries.
Bumped `nusb` version to 0.2 with `smol` features, updated related dependencies (`core-foundation`, `linux-raw-sys`, etc.), and removed redundant references in `Cargo.lock` for improved compatibility and dependencies management.

Signed-off-by: MillieFD <155637089+MillieFD@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,14 @@ crate-type = ["lib"]
 py = ["dep:pyo3"]
 
 [dependencies]
-nusb = "0.1.14"
 smol = "2.0"
 async-broadcast = "0.7"
 ahash = "0.8"
 log = "0.4"
+
+[dependencies.nusb]
+version = "0.2"
+features = ["smol"]
 
 [dependencies.thormacros]
 path = "thormacros"
